adding in basic users
adding in angular controller, tests, and ui for basic users. broke the
frameless window so I removed it. need to look into why it broke
further.

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "version": "0.0.1",
     "main": "./views/index.html",
     "window": {
-        "toolbar": false,
-        "frame": false
+        "toolbar": false
     },
   "dependencies": {
       "connect": "1.8.5",
