--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "description": "A picker engine to determine who wins tickets in the company lottery.",
     "author": "Ben Nelson <ben.nelson@healthcatalyst.com>",
     "version": "0.0.1",
-    "main": "./views/index.html",
+    "main": "./templates/index.html",
     "window": {
         "toolbar": false
     },
@@ -31,6 +31,7 @@
     "grunt-contrib-jshint": "~0.7.1",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-watch": "~0.5.2",
+    "grunt-contrib-jade": "0.8.x",
     "grunt-google-cdn": "~0.2.0",
     "grunt-newer": "~0.5.4",
     "grunt-ngmin": "~0.0.2",
