--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
       "express": "2.5.2",
       "jade": "0.20.0",
       "mongoose": "2.4.8",
-      "socket.io": "0.8.7"
+      "socket.io": "0.8.7",
+      "activedirectory": "0.4.1",
+      "js-yaml": "~3.0"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
