--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
     "version": "0.0.1",
     "main": "./templates/index.html",
     "window": {
-        "toolbar": false
+        "toolbar": true
     },
   "dependencies": {
       "connect": "1.8.5",
-      "express": "2.5.2",
+      "express": "3.0.0",
       "jade": "0.20.0",
       "mongoose": "2.4.8",
       "socket.io": "0.8.7",
